<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Novocation Demo</string>
    
    <!-- Settings -->
    <string name="use_gps">Use GPS</string>
    <string name="updates">Updates</string>
    <string name="passive_updates">Passive updates</string>
    <string name="update_interval">Update interval</string>
    <string name="update_distance">Update distance</string>
    <string name="passive_interval">Passive interval</string>
    <string name="passive_distance">Passive distance</string>
    
    <!-- Location -->
    <string name="time">Time</string>
    <string name="accuracy">Accuracy</string>
    <string name="provider">Provider</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>

</resources>